# nvdiffrast

./: .gitignore  setup.py
nvdiffrast/common/: framework.h  glutil.h  rasterize.cpp  rasterize.h
nvdiffrast/jax/: CMakeLists.txt  __init__.py  dependency.md  install_dep.sh  jax_antialias.cpp  jax_antialias.h  jax_interpolate.cpp  jax_interpolate.h  jax_ops.py  jax_ops_interp.py  jax_rasterize.cpp  jax_rasterize.cu  jax_rasterize.h  jax_rasterize_cuda.cpp  jax_rasterize_gl.cpp  jax_texture.cpp  jax_texture.h  kernel_helpers.h  ops_anti.py  ops_interp.py  ops_rast.py  ops_tex.py  pybind11.cpp  pybind11_kernel_helpers.h  utils.py
nvdiffrast/torch/: ops.py
samples/jax/: cube.py
samples/torch/: cube.py  earth.py  envphong.py  pose.py
test/: antialias.py  download_cow.sh  interpolate.py  rasterize.py  texture.py
test/meshio/: load.py
